Use CSS to solve scrolling issue instead of JS
Turns out you can set overflow-y to auto instead of having to switch it
on and off manually. Also the sidebar supports overflow content now. The
max-height is required because otherwise the position: fixed makes some
stuff permanently off screen -- not sure why that is but it is.

--- a/src/app.css
+++ b/src/app.css
@@ -80,6 +80,7 @@ div.app {
     bottom: 0;
     position: fixed;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .content-container canvas {
@@ -135,6 +136,8 @@ nav.sidebar {
     box-sizing: border-box;
     color: #333333;
     padding: 0;
+    overflow-y: auto;
+    max-height: calc(100vh - 50px);
 }
 
 .sidebar section {
